[package]
name = "ueficraft"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.36.1", features = ["logger","alloc","global_allocator","panic_handler"] }


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true


