[package]
name = "ueficraft"
version = "0.1.2"
edition = "2024"

[dependencies]
glam = { version = "0.30.9", default-features = false, features = ["zerocopy", "libm"] }
uefi = { version = "0.36.1", features = ["logger", "alloc", "global_allocator", "panic_handler"] }


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true


